# ZionAudioPro

./: .gitignore  AUDIT_REPORT.md  Audio64Bit-Android-music.md  CMakeLists.txt  README.md  RoadMap.md  build.gradle.kts  copilot-instructions.md  gradle.properties  settings.gradle.kts  test.cpp  tmp_main.kt
.claude/: settings.local.json
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/aiproject/musicplayer/: AudioEngine.kt  DlnaDiscovery.kt  DlnaPlaybackCache.kt  DlnaProtocol.kt  DsdInfo.kt  EqSettings.kt  LibraryBrowserModels.kt  LibraryFolderEntry.kt  MainActivity.kt  MainActivitySections.kt  PlaybackContentMode.kt  PlaybackQueueFlow.kt  PlaybackRestore.kt  PlaybackService.kt  PlaybackShuffle.kt  PlaybackSpeed.kt  PlaybackSpeedMode.kt  PlaybackStateMachine.kt  PlaybackTransitions.kt  PlaylistMerge.kt  PlaylistNavigator.kt  PlaylistOrdering.kt  PlaylistSortMode.kt  PlaylistSummary.kt  VolumeRamp.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/aiproject/musicplayer/: DlnaProtocolTest.kt  (+15 more)
src/core/: AudioBuffer.h  AudioPlayer.h  RingBuffer.h
src/decoders/: DsdDecoder.h  FdReader.h  FlacDecoder.h  IAudioDecoder.h  Mp3Decoder.h  ReplayGainScanner.h  WavDecoder.h
src/dsp/: BiquadFilter.h  DitherProcessor.h  Fft.h  GainProcessor.h  GraphicEqProcessor.h  IAudioProcessor.h  TimeStretchProcessor.h
src/hw/: IAudioEndpoint.h  OboeAudioEndpoint.h  UsbAudioEndpoint.h
src/jni/: audio_engine_jni.cpp
(+3 files in other folders)
